# live2d_mini_rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
live2d_mini/: .gitignore  Cargo.toml
live2d_mini/src/: address.rs  animation.rs  constant_flag.rs  drawable.rs  dynamic_flag.rs  lib.rs  model.rs  model_json.rs  model_resource.rs  motion_json.rs  parameter.rs  part.rs  physic.rs  physic_json.rs  vector2.rs
live2d_mini_rust/: Cargo.toml
live2d_mini_rust/src/: main.rs
src/: animation.rs  main.rs  pose_json.rs
