[package]
name = "live2d_mini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
live2d_mini_sys = { path = "../live2d_mini_sys" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

miniquad = { version = "0.3.3"}
image = "0.24"
